# retail-item-locator

./: .gitignore  index.html  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.ts
api/: .env  app.py  import.py  lookup.py  product-import.py  test.py
backend/: .env  app.py  db.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/components/: BulkImport.tsx  ItemLookup.tsx  ProductImport.tsx
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: BulkImport.tsx  ItemLookup.tsx  ProductImport.tsx
src/: App.tsx
src/components/: ItemLookup.tsx  ProductImport.tsx
